--- a/about.html
+++ b/about.html
@@ -14,19 +14,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header class="main-header">
-        <div class="container d-flex flex-column align-items-center">
-            <a href="index.html" class="logo mb-3">
-                <img src="logo.png" alt="BayHome Import Logo">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="BayHome İthalat Logosu">
             </a>
             <nav class="main-nav">
+                <div class="hamburger" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ul>
-                    <li><a href="index-en.html">Home</a></li>
-                    <li><a href="index-en.html#hizmetler">Services</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="index-en.html#iletisim">Contact</a></li>
+                    <li><a href="index.html">Anasayfa</a></li>
+                    <li><a href="index.html#hizmetler">Hizmetler</a></li>
+                    <li><a href="urunler.html">Ürünler</a></li>
+                    <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                    <li><a href="index.html#iletisim">İletişim</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -39,14 +43,8 @@
                     <a href="index-en.html" class="lang-btn">EN</a>
                 </div>
             </div>
-
-            <div class="language-switcher">
-                <a href="index.html" class="lang-btn">TR</a>
-                <a href="index-en.html" class="lang-btn active">EN</a>
-            </div>
         </div>
     </header>
-
     <main>
         <section id="hakkimizda-ana" class="py-5">
             <div class="container">
@@ -105,6 +103,12 @@
             <p>&copy; 2025 BayHome Import. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            document.querySelector('.main-nav').classList.toggle('active');
+        }
+    </script>
 
 </body>
 </html>
