--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
 </head>
 <body>
 
-  <header class="main-header">
-    <div class="container">
-        <a href="index.html" class="logo">
-            <img src="logo.png" alt="BayHome İthalat Logosu">
-        </a>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="index.html#hizmetler">Hizmetler</a></li>
-                <li><a href="urunler.html">Ürünler</a></li>
-                <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                <li><a href="index.html#iletisim">İletişim</a></li>
-            </ul>
-        </nav>
-        <div class="header-actions">
-            <div class="social-icons">
-                <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="language-switcher">
-                <a href="index.html" class="lang-btn active">TR</a>
-                <a href="index-en.html" class="lang-btn">EN</a>
+    <header class="main-header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="BayHome İthalat Logosu">
+            </a>
+            <nav class="main-nav">
+                <div class="hamburger" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <ul>
+                    <li><a href="index.html">Anasayfa</a></li>
+                    <li><a href="index.html#hizmetler">Hizmetler</a></li>
+                    <li><a href="urunler.html">Ürünler</a></li>
+                    <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                    <li><a href="index.html#iletisim">İletişim</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                </div>
+                <div class="language-switcher">
+                    <a href="index.html" class="lang-btn active">TR</a>
+                    <a href="index-en.html" class="lang-btn">EN</a>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
     <section id="anasayfa">
         <div class="container">
@@ -146,6 +151,12 @@
             <p>© 2025 BayHome İthalat. Tüm hakları saklıdır.</p>
         </div>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            document.querySelector('.main-nav').classList.toggle('active');
+        }
+    </script>
 
 </body>
 </html>
