--- a/products.html
+++ b/products.html
@@ -16,17 +16,22 @@
 <body>
 
     <header class="main-header">
-        <div class="container d-flex flex-column align-items-center">
-            <a href="index.html" class="logo mb-3">
-                <img src="logo.png" alt="BayHome Import Logo">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="BayHome İthalat Logosu">
             </a>
             <nav class="main-nav">
+                <div class="hamburger" onclick="toggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ul>
-                    <li><a href="index-en.html" class="lang-link">Home</a></li>
-                    <li><a href="index-en.html#hizmetler" class="lang-link">Services</a></li>
-                    <li><a href="products.html" class="lang-link">Products</a></li>
-                    <li><a href="about.html" class="lang-link">About Us</a></li>
-                    <li><a href="index-en.html#iletisim" class="lang-link">Contact</a></li>
+                    <li><a href="index.html">Anasayfa</a></li>
+                    <li><a href="index.html#hizmetler">Hizmetler</a></li>
+                    <li><a href="urunler.html">Ürünler</a></li>
+                    <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                    <li><a href="index.html#iletisim">İletişim</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -38,10 +43,6 @@
                     <a href="index.html" class="lang-btn active">TR</a>
                     <a href="index-en.html" class="lang-btn">EN</a>
                 </div>
-            </div>
-            <div class="language-switcher">
-                <a href="index.html" class="lang-btn">TR</a>
-                <a href="index-en.html" class="lang-btn active">EN</a>
             </div>
         </div>
     </header>
@@ -68,5 +69,11 @@
             <p>© 2025 BayHome Import. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            document.querySelector('.main-nav').classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
