--- a/index-en.html
+++ b/index-en.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BayHome Import | Professional Import Services</title>
-    <style>
-        body {
-            transition: opacity 0.5s ease-in-out;
-            opacity: 0;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,20 +14,15 @@
                 <img src="logo.png" alt="BayHome Import Logo">
             </a>
             <nav class="main-nav" id="mainNav">
-                <div class="hamburger" id="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <ul>
                     <li><a href="index-en.html">Home</a></li>
                     <li><a href="index-en.html#services">Services</a></li>
-                    <li><a href="products-en.html">Products</a></li>
-                    <li><a href="about-en.html">About Us</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="index-en.html#contact">Contact</a></li>
                 </ul>
             </nav>
-            <div class="header-actions" id="headerActions">
+            <div class="header-actions">
                 <div class="social-icons">
                     <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -44,111 +33,107 @@
                 </div>
             </div>
         </div>
-        <!-- Mobile Actions: menu under hamburger -->
-        <div class="mobile-actions" id="mobileActions">
-            <div class="social-icons">
-                <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="language-switcher">
-                <a href="index.html" class="lang-btn">TR</a>
-                <a href="index-en.html" class="lang-btn active">EN</a>
-            </div>
-        </div>
+        <button class="hamburger-menu" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
 
-    <section id="home">
-        <div class="container">
-            <h1>Your Reliable Partner in Global Sourcing</h1>
-            <p>We import the best quality products from around the world for you.</p>
-            <a href="#services" class="cta-button">Discover Our Services</a>
-        </div>
-    </section>
+    <main>
+        <section id="anasayfa">
+            <div class="container">
+                <h1>Your Reliable Partner in Global Sourcing</h1>
+                <p>We import the best quality products from around the world for you.</p>
+                <a href="#services" class="cta-button">Discover Our Services</a>
+            </div>
+        </section>
 
-    <section id="services" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Our Services</h2>
-            <p class="text-center mb-5">Explore the unique solutions we offer for your business.</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card text-center mb-4">
-                        <div class="card-icon">
-                            <i class="fas fa-search fa-3x"></i>
-                        </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Product & Supplier Research</h3>
-                            <p class="card-text">We identify the most suitable products at the best prices from reliable manufacturers.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card text-center mb-4">
-                        <div class="card-icon">
-                            <i class="fas fa-hand-holding-box fa-3x"></i>
-                        </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Sample Procurement & Quality Control</h3>
-                            <p class="card-text">We supply samples and conduct quality and compliance checks before your purchase.</p>
+        <section id="services" class="bg-light py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Our Services</h2>
+                <p class="text-center mb-5">Explore the unique solutions we offer for your business.</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card text-center mb-4">
+                            <div class="card-icon">
+                                <i class="fas fa-search fa-3x"></i>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Product & Supplier Research</h3>
+                                <p class="card-text">We identify the most suitable products at the best prices from reliable manufacturers.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card text-center mb-4">
-                        <div class="card-icon">
-                            <i class="fas fa-warehouse fa-3x"></i>
+                    <div class="col-md-4">
+                        <div class="card text-center mb-4">
+                            <div class="card-icon">
+                                <i class="fas fa-hand-holding-box fa-3x"></i>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Sample Procurement & Quality Control</h3>
+                                <p class="card-text">We supply samples and conduct quality and compliance checks before your purchase.</p>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <h3 class="card-title">Storage & Distribution</h3>
-                            <p class="card-text">We store your products under proper conditions and deliver them to the final destination.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card text-center mb-4">
+                            <div class="card-icon">
+                                <i class="fas fa-warehouse fa-3x"></i>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Storage & Distribution</h3>
+                                <p class="card-text">We store your products under proper conditions and deliver them to the final destination.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="about-cta">
-        <h2>Discover Our Story</h2>
-        <p>Learn more about our passion and core values.</p>
-        <a href="about-en.html" class="cta-button">About Us</a>
-    </section>
+        <section id="hakkimizda-cta">
+            <h2>Discover Our Story</h2>
+            <p>Join us to learn more about our passion and values.</p>
+            <a href="about.html" class="cta-button">About Us</a>
+        </section>
 
-    <section id="contact" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Contact Us</h2>
-            <div class="iletisim-icerik">
-                <div class="harita-kolon">
-                    <div class="harita">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.0572154541155!2d28.822786075861586!3d41.067741971342286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa59c3c09f293%3A0xc3ccfed09e32e1e1!2sBayhome%20%C4%B0thalat!5e0!3m2!1str!2str!4v1754121318643!5m2!1str!2str" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <section id="contact" class="bg-light py-5">
+            <div class="container">
+                <h2 class="text-center mb-5">Contact Us</h2>
+                <div class="iletisim-icerik">
+                    <div class="harita-kolon">
+                        <div class="harita">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.0572154541155!2d28.822786075861586!3d41.067741971342286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa59c3c09f293%3A0xc3ccfed09e32e1e1!2sBayhome%20%C4%B0thalat!5e0!3m2!1str!2str!4v1754121318643!5m2!1str!2str" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
                     </div>
-                </div>
-                <div class="bilgi-kolon">
-                    <div class="contact-info mb-4">
-                        <h3>Contact Information</h3>
-                        <p><i class="fas fa-map-marker-alt"></i> Address: Mahmutbey, İstoç 10. Ada No:89-91, 34218 Bağcılar/Istanbul</p>
-                        <p><i class="fas fa-phone-alt"></i> Phone: +90 543 970 32 10</p>
-                        <p><i class="fas fa-envelope"></i> Email: bayhomeithalat@gmail.com</p>
-                        <p><i class="fas fa-clock"></i> Working Hours: Mon - Sat: 08:00 - 18:00</p>
+                    <div class="bilgi-kolon">
+                        <div class="contact-info mb-4">
+                            <h3>Contact Information</h3>
+                            <p><i class="fas fa-map-marker-alt"></i> Address: Mahmutbey, İstoç 10. Ada No:89-91, 34218 Bağcılar/Istanbul</p>
+                            <p><i class="fas fa-phone-alt"></i> Phone: +90 543 970 32 10</p>
+                            <p><i class="fas fa-envelope"></i> Email: bayhomeithalat@gmail.com</p>
+                            <p><i class="fas fa-clock"></i> Working Hours: Mon - Sat: 08:00 - 18:00</p>
+                        </div>
+                        <form action="send_mail.php" method="POST" class="contact-form">
+                            <div class="form-group mb-3">
+                                <label for="adsoyad" class="form-label">Your Name</label>
+                                <input type="text" class="form-control" id="adsoyad" name="adsoyad" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="email" class="form-label">Your Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label for="mesaj" class="form-label">Your Message</label>
+                                <textarea class="form-control" id="mesaj" name="mesaj" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="cta-button">Send</button>
+                        </form>
                     </div>
-                    <form action="send_mail.php" method="POST" class="contact-form">
-                        <div class="form-group mb-3">
-                            <label for="adsoyad" class="form-label">Your Name</label>
-                            <input type="text" class="form-control" id="adsoyad" name="adsoyad" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="email" class="form-label">Your Email</label>
-                            <input type="email" class="form-control" id="email" name="email" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="mesaj" class="form-label">Your Message</label>
-                            <textarea class="form-control" id="mesaj" name="mesaj" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="cta-button">Send</button>
-                    </form>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <a href="https://wa.me/905439703210" target="_blank" class="whatsapp-button">
         <i class="fab fa-whatsapp"></i>
@@ -161,22 +146,25 @@
     </footer>
 
     <script>
-        const hamburger = document.getElementById('hamburger');
-        const mainNav = document.getElementById('mainNav');
-        const mobileActions = document.getElementById('mobileActions');
-        hamburger.addEventListener('click', function () {
-            mainNav.classList.toggle('active');
-            hamburger.classList.toggle('active');
-            mobileActions.classList.toggle('active');
-        });
-        // Close menu when link clicked (mobile)
-        document.querySelectorAll('.main-nav ul li a').forEach(function (link) {
-            link.addEventListener('click', function () {
-                if (window.innerWidth <= 768) {
-                    mainNav.classList.remove('active');
-                    hamburger.classList.remove('active');
-                    mobileActions.classList.remove('active');
-                }
+        document.addEventListener('DOMContentLoaded', function () {
+            const hamburger = document.getElementById('hamburger');
+            const mainNav = document.getElementById('mainNav');
+            const navLinks = document.querySelectorAll('.main-nav ul li a');
+
+            if (hamburger) {
+                hamburger.addEventListener('click', function () {
+                    mainNav.classList.toggle('active');
+                    hamburger.classList.toggle('active');
+                });
+            }
+
+            navLinks.forEach(function (link) {
+                link.addEventListener('click', function () {
+                    if (window.innerWidth <= 768) {
+                        mainNav.classList.remove('active');
+                        hamburger.classList.remove('active');
+                    }
+                });
             });
         });
     </script>
