--- a/products.html
+++ b/products.html
@@ -17,21 +17,16 @@
 
     <header class="main-header">
         <div class="container">
-            <a href="index.html" class="logo">
-                <img src="logo.png" alt="BayHome İthalat Logosu">
+            <a href="index-en.html" class="logo">
+                <img src="logo.png" alt="BayHome Import Logo">
             </a>
             <nav class="main-nav" id="mainNav">
-                <div class="hamburger" id="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <ul>
-                    <li><a href="index.html">Anasayfa</a></li>
-                    <li><a href="index.html#hizmetler">Hizmetler</a></li>
-                    <li><a href="urunler.html">Ürünler</a></li>
-                    <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                    <li><a href="index.html#iletisim">İletişim</a></li>
+                    <li><a href="index-en.html">Home</a></li>
+                    <li><a href="index-en.html#services">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index-en.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -40,10 +35,15 @@
                     <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="language-switcher">
-                    <a href="index.html" class="lang-btn active">TR</a>
-                    <a href="index-en.html" class="lang-btn">EN</a>
+                    <a href="index.html" class="lang-btn">TR</a>
+                    <a href="index-en.html" class="lang-btn active">EN</a>
                 </div>
             </div>
+            <button class="hamburger-menu" aria-label="Open menu" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
