--- a/index.html
+++ b/index.html
@@ -4,27 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BayHome İthalat | Profesyonel İthalat Hizmetleri</title>
-    <style>
-        .page-transition {
-            transition: opacity 0.5s ease-in-out;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="BayHome İthalat Logosu">
             </a>
             <nav class="main-nav" id="mainNav">
-                <div class="hamburger" id="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <ul>
                     <li><a href="index.html">Anasayfa</a></li>
                     <li><a href="index.html#hizmetler">Hizmetler</a></li>
@@ -33,7 +22,7 @@
                     <li><a href="index.html#iletisim">İletişim</a></li>
                 </ul>
             </nav>
-            <div class="header-actions" id="headerActions">
+            <div class="header-actions">
                 <div class="social-icons">
                     <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -44,28 +33,22 @@
                 </div>
             </div>
         </div>
-        <!-- Menü altında sosyal ve dil seçenekleri (mobilde görünecek) -->
-        <div class="mobile-actions" id="mobileActions">
-            <div class="social-icons">
-                <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="language-switcher">
-                <a href="index.html" class="lang-btn active">TR</a>
-                <a href="index-en.html" class="lang-btn">EN</a>
-            </div>
-        </div>
+        <button class="hamburger-menu" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
 
-    <section id="anasayfa">
-        <div class="container">
-            <h1>Global Tedarikte Güvendiğiniz Ortak</h1>
-            <p>Dünya genelinden en kaliteli ürünleri sizin için ithal ediyoruz.</p>
-            <a href="#hizmetler" class="cta-button">Hizmetlerimizi Keşfedin</a>
-        </div>
-    </section>
-
     <main>
+        <section id="anasayfa">
+            <div class="container">
+                <h1>Global Tedarikte Güvendiğiniz Ortak</h1>
+                <p>Dünya genelinden en kaliteli ürünleri sizin için ithal ediyoruz.</p>
+                <a href="#hizmetler" class="cta-button">Hizmetlerimizi Keşfedin</a>
+            </div>
+        </section>
+
         <section id="hizmetler" class="bg-light py-5">
             <div class="container">
                 <h2 class="text-center mb-4">Hizmetlerimiz</h2>
@@ -120,7 +103,7 @@
                 <div class="iletisim-icerik">
                     <div class="harita-kolon">
                         <div class="harita">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.0572154541155!2d28.822786075861586!3d41.067741971342286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa59c3c09f293%3A0xc3ccfed09e32e1e1!2sBayhome%20%C4%B0thalat!5e0!3m2!1str!2str!4v1754121318643!5m2!1str!2str" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.0572154541155!2d28.822786075861586!3d41.067741971342286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa59c3c09f293%3A0xc3ccfed09e32e1e1!2sBayhome%20%C4%B0thalat!5e0!3m2!1str!2str!4v1754121318643!5m2!1str!2str"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                     <div class="bilgi-kolon">
@@ -161,24 +144,27 @@
             <p>© 2025 BayHome İthalat. Tüm hakları saklıdır.</p>
         </div>
     </footer>
+
     <script>
-        const hamburger = document.getElementById('hamburger');
-        const mainNav = document.getElementById('mainNav');
-        const mobileActions = document.getElementById('mobileActions');
-        function toggleMenu() {
-            mainNav.classList.toggle('active');
-            hamburger.classList.toggle('active');
-            mobileActions.classList.toggle('active');
-        }
-        hamburger.addEventListener('click', toggleMenu);
-        // Menü tıklandığında otomatik kapanması (isteğe bağlı)
-        document.querySelectorAll('.main-nav ul li a').forEach(function (link) {
-            link.addEventListener('click', function () {
-                if (window.innerWidth <= 768) {
-                    mainNav.classList.remove('active');
-                    hamburger.classList.remove('active');
-                    mobileActions.classList.remove('active');
-                }
+        document.addEventListener('DOMContentLoaded', function () {
+            const hamburger = document.getElementById('hamburger');
+            const mainNav = document.getElementById('mainNav');
+            const navLinks = document.querySelectorAll('.main-nav ul li a');
+
+            if (hamburger) {
+                hamburger.addEventListener('click', function () {
+                    mainNav.classList.toggle('active');
+                    hamburger.classList.toggle('active');
+                });
+            }
+
+            navLinks.forEach(function (link) {
+                link.addEventListener('click', function () {
+                    if (window.innerWidth <= 768) {
+                        mainNav.classList.remove('active');
+                        hamburger.classList.remove('active');
+                    }
+                });
             });
         });
     </script>
