--- a/about.html
+++ b/about.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BayHome Imports | About Us</title>
-    <style>
-        body {
-            transition: opacity 0.5s ease-in-out;
-            opacity: 0;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="main-header">
         <div class="container">
+
             <a href="index-en.html" class="logo">
                 <img src="logo.png" alt="BayHome Import Logo">
             </a>
+
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="index-en.html">Home</a></li>
@@ -28,21 +24,24 @@
                     <li><a href="index-en.html#contact">Contact</a></li>
                 </ul>
             </nav>
+
             <div class="header-actions">
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
                 </div>
                 <div class="language-switcher">
                     <a href="index.html" class="lang-btn">TR</a>
                     <a href="index-en.html" class="lang-btn active">EN</a>
                 </div>
             </div>
-            <button class="hamburger-menu" aria-label="Open menu" id="hamburger">
+
+            <button class="hamburger" id="hamburger" aria-label="Open/close menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
+
         </div>
     </header>
     <main>
@@ -94,7 +93,7 @@
         </section>
     </main>
 
-    <a href="https://wa.me/905530976170" target="_blank" class="whatsapp-button">
+    <a href="https://wa.me/905439703210" target="_blank" class="whatsapp-button">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -104,19 +103,31 @@
         </div>
     </footer>
     <script>
-        const hamburger = document.getElementById('hamburger');
-        const mainNav = document.getElementById('mainNav');
-        hamburger.addEventListener('click', function () {
-            mainNav.classList.toggle('active');
-            hamburger.classList.toggle('active');
-        });
-        // Menü tıklandığında otomatik kapanması (isteğe bağlı)
-        document.querySelectorAll('.main-nav ul li a').forEach(function (link) {
-            link.addEventListener('click', function () {
-                if (window.innerWidth <= 768) {
-                    mainNav.classList.remove('active');
-                    hamburger.classList.remove('active');
-                }
+        document.addEventListener('DOMContentLoaded', function () {
+            // Sayfanın yavaşça belirmesini sağlar (fade-in efekti)
+            document.body.style.transition = 'opacity 0.5s ease-in-out';
+            document.body.style.opacity = 1;
+
+            const hamburger = document.getElementById('hamburger');
+            const mainNav = document.getElementById('mainNav');
+            const navLinks = document.querySelectorAll('.main-nav ul li a');
+
+            // Hamburger menü tıklama olayını yönetir
+            if (hamburger) {
+                hamburger.addEventListener('click', function () {
+                    mainNav.classList.toggle('active');
+                    hamburger.classList.toggle('active');
+                });
+            }
+
+            // Mobil menüde bir linke tıklandığında menüyü otomatik kapatır
+            navLinks.forEach(function (link) {
+                link.addEventListener('click', function () {
+                    if (window.innerWidth <= 768) {
+                        mainNav.classList.remove('active');
+                        hamburger.classList.remove('active');
+                    }
+                });
             });
         });
     </script>
