--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <header class="main-header">
         <div class="container">
+
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="BayHome İthalat Logosu">
             </a>
+
             <nav class="main-nav" id="mainNav">
                 <ul>
                     <li><a href="index.html">Anasayfa</a></li>
@@ -22,22 +24,25 @@
                     <li><a href="index.html#iletisim">İletişim</a></li>
                 </ul>
             </nav>
+
             <div class="header-actions">
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/bayhomeithalat" target="_blank" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61578163581716" target="_blank" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
                 </div>
                 <div class="language-switcher">
                     <a href="index.html" class="lang-btn active">TR</a>
                     <a href="index-en.html" class="lang-btn">EN</a>
                 </div>
             </div>
+
+            <button class="hamburger" id="hamburger" aria-label="Menüyü aç/kapat">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
         </div>
-        <button class="hamburger-menu" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
     </header>
 
     <main>
@@ -147,10 +152,15 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            // Sayfanın yavaşça belirmesini sağlar (fade-in efekti)
+            document.body.style.transition = 'opacity 0.5s ease-in-out';
+            document.body.style.opacity = 1;
+
             const hamburger = document.getElementById('hamburger');
             const mainNav = document.getElementById('mainNav');
             const navLinks = document.querySelectorAll('.main-nav ul li a');
 
+            // Hamburger menü tıklama olayını yönetir
             if (hamburger) {
                 hamburger.addEventListener('click', function () {
                     mainNav.classList.toggle('active');
@@ -158,6 +168,7 @@
                 });
             }
 
+            // Mobil menüde bir linke tıklandığında menüyü otomatik kapatır
             navLinks.forEach(function (link) {
                 link.addEventListener('click', function () {
                     if (window.innerWidth <= 768) {
