--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -20,6 +20,12 @@
                     <li><a href="urunler.html">Ürünler</a></li>
                     <li><a href="hakkimizda.html">Hakkımızda</a></li>
                     <li><a href="index.html#iletisim">İletişim</a></li>
+                    <li class="mobile-language-switcher">
+                        <div class="language-switcher">
+                            <a href="index-en.html" class="lang-btn">EN</a>
+                            <a href="index.html" class="lang-btn active">TR</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="header-actions">
