--- a/index-en.html
+++ b/index-en.html
@@ -20,6 +20,12 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="index-en.html#contact">Contact</a></li>
+                    <li class="mobile-language-switcher">
+                        <div class="language-switcher">
+                            <a href="index.html" class="lang-btn">TR</a>
+                            <a href="index-en.html" class="lang-btn active">EN</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -91,10 +97,10 @@
             </div>
         </section>
 
-        <section id="hakkimizda-cta">
-            <h2>Discover Our Story</h2>
-            <p>Join us to learn more about our passion and values.</p>
-            <a href="about.html" class="cta-button">About Us</a>
+        <section id="urunler-cta">
+            <h2>Explore Our Products</h2>
+            <p>Browse our catalog to take a closer look at our quality and innovative products.</p>
+            <a href="products.html" class="cta-button">All Products</a>
         </section>
 
         <section id="contact" class="bg-light py-5">
