--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                     <li><a href="urunler.html">Ürünler</a></li>
                     <li><a href="hakkimizda.html">Hakkımızda</a></li>
                     <li><a href="index.html#iletisim">İletişim</a></li>
+                    <li class="mobile-language-switcher">
+                        <div class="language-switcher">
+                            <a href="index-en.html" class="lang-btn">EN</a>
+                            <a href="index.html" class="lang-btn active">TR</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -90,10 +96,10 @@
             </div>
         </section>
 
-        <section id="hakkimizda-cta">
-            <h2>Hikayemizi Keşfedin</h2>
-            <p>Tutkumuz ve değerlerimiz hakkında daha fazla bilgi edinmek için bize katılın.</p>
-            <a href="hakkimizda.html" class="cta-button">Hakkımızda</a>
+        <section id="urunler-cta">
+            <h2>Ürünlerimizi Keşfedin</h2>
+            <p>Kaliteli ve yenilikçi ürünlerimizi daha yakından incelemek için kataloğumuza göz atın.</p>
+            <a href="urunler.html" class="cta-button">Tüm Ürünler</a>
         </section>
 
         <section id="iletisim" class="bg-light py-5">
