--- a/products.html
+++ b/products.html
@@ -21,6 +21,12 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="index-en.html#contact">Contact</a></li>
+                    <li class="mobile-language-switcher">
+                        <div class="language-switcher">
+                            <a href="index.html" class="lang-btn">TR</a>
+                            <a href="index-en.html" class="lang-btn active">EN</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="header-actions">
