--- a/products.html
+++ b/products.html
@@ -54,8 +54,7 @@
                 <p class="text-center mb-5">You can browse all our products in our interactive catalogue below.</p>
 
                 <div class="katalog-kapsayici">
-                    <iframe style='width:900px;height:500px' src='https://online.pubhtml5.com/zyvbv/ybdl/' seamless='seamless' scrolling='no' frameborder='0' allowtransparency='true' ></iframe>
-                </div>
+                    <iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/a07ef76030.html" style="border: 0px; width: 100%; height: 501px;"></iframe></div>
             </div>
         </section>
     </main>
